fix gaps

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ h1 {
 .tab-content {
     display: none;
     flex-direction: column;
-    gap: 20px;
+
 }
 
 .tab-content.active {
@@ -72,6 +72,7 @@ input {
     background-color: #2C2C2C;
     border: none;
     border-radius: 10px;
+    margin-bottom: 20px;
     padding-left: 20px;
     font-size: 20px;
     color: #E0E0E0;
